--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     -->
 
     <title>FakeSHOP</title>
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
